Improvements in the analyis tool and helpers